conflict resolved